[package]
name = "ssdedupe"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12" }
compact_str = { version = "0.9.0", features = ["serde"] }
eframe = { version = "0.32.1", features = ["persistence"] }
egui = "0.32.1"
humansize = { version = "2.1.3", features = ["impl_style"] }
itertools = "0.14.0"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rayon = "1.11.0"
rfd = { version = "0.15.4", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
